--- a/gallery.html
+++ b/gallery.html
@@ -97,18 +97,17 @@
 					<div class="row no-gutters">
 
 						<div class="col-md-4 ftco-animate">
-							<div class="img">
-							<a href="collage0.html" target="_blank"></div>
-								<div class="image">
-  								<img style="max-width:100%; position:absolute; top:0px; left:0px; z-index:1" src="images/image_0.jpg">
-  								<img style="max-width:100%; position:absolute; top:0px; left:0px; z-index:1" src="frame1.png">
+							<a href="images/image_0.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_0.jpg);">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Foto 0</h3>
+									<span class="tag">by NAO</span>
 								</div>
 							</a>
 						</div>
 
 
 						<div class="col-md-4 ftco-animate">
-							<a href="collage.html" target="_blank"></a>
 							<a href="images/image_1.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_1.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
