--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Capture - Free Bootstrap 4 Template by Colorlib</title>
+    <title>WEB NAO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -27,20 +27,17 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
 
+  <body>
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
+		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center align-content-center">
 			<h1 id="colorlib-logo"><a ><img src="uteclogo.png" style="max-width:105%" alt="Image"></a></h1>
 
 			<nav id="colorlib-main-menu" role="navigation">
-				<ul>
 					<h1 class="colorlib-active">Open Day</h1>
 					<h5 class="mb-3 bread"><a>Proyecto NAO</a></h5>
-				</ul>
 			</nav>
-
 
 			<!-- CORREO -->
 	          <div class="sidebar-box subs-wrap img">
@@ -74,7 +71,7 @@
 	            </form>
 	          </div>
 
-
+		<meta http-equiv="refresh" content="30">
 
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
@@ -90,11 +87,43 @@
 				</div>
 			</section>
 
-			<meta http-equiv="refresh" content="120">
-
 			<section class="ftco-section-2">
 				<div class="photography">
 					<div class="row no-gutters">
+
+						<div class="col-md-4 ftco-animate">
+							<a href="images/image_0.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_0.jpg);">
+								<div class="overlay"></div>
+								<a href="collage0.html" target="_blank"</a>
+								<div class="align-content-center text text-center">
+									<div class="overlay"></div>
+									<span class="tag">Foto 0</span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-4 ftco-animate">
+							<a href="images/image_1.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_1.jpg);">
+								<div class="overlay"></div>
+								<a href="collage1.html" target="_blank"</a>
+								<div class="align-content-center text text-center">
+									<div class="overlay"></div>
+									<span class="tag">Foto 1</span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-4 ftco-animate">
+							<a href="images/image_2.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_2.jpg);">
+								<div class="overlay"></div>
+								<a href="collage2.html" target="_blank"</a>
+								<div class="align-content-center text text-center">
+									<div class="overlay"></div>
+									<span class="tag">Foto 2</span>
+								</div>
+							</a>
+						</div>
+
 
 						<div class="col-md-4 ftco-animate">
 							<a href="images/image_0.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_0.jpg);">
@@ -105,7 +134,6 @@
 								</div>
 							</a>
 						</div>
-
 
 						<div class="col-md-4 ftco-animate">
 							<a href="images/image_1.jpg" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(images/image_1.jpg);">
